[gd_scene load_steps=6 format=3 uid="uid://be6sw31moxdax"]

[ext_resource type="Script" uid="uid://84pie8fk5t4o" path="res://scenes/four_layer_background.gd" id="1_vnb10"]
[ext_resource type="Texture2D" uid="uid://g4whg3lho6xy" path="res://images/levels/test/5 - Sky_color.png" id="2_g4dej"]
[ext_resource type="Texture2D" uid="uid://cg6gnr1g23twq" path="res://images/levels/test/4 - Background_clouds.png" id="3_o51cj"]
[ext_resource type="Texture2D" uid="uid://dchs05aiq6jf5" path="res://images/levels/test/1 - Waters_version_1.png" id="4_kfpsy"]
[ext_resource type="Texture2D" uid="uid://caeg2klu5665b" path="res://images/levels/test/5 - Water_foreground.png" id="5_52k3x"]

[node name="FourLayerBackground" type="Node2D"]
z_index = -10
z_as_relative = false
script = ExtResource("1_vnb10")

[node name="StillBG" type="Parallax2D" parent="."]
scroll_scale = Vector2(0, 0)

[node name="Sprite" type="Sprite2D" parent="StillBG"]
texture_repeat = 2
position = Vector2(376, 111.99999)
scale = Vector2(2.615604, 2.2854176)
texture = ExtResource("2_g4dej")

[node name="FarBG" type="Parallax2D" parent="."]
z_index = 1
scroll_scale = Vector2(0.25, 0)
repeat_size = Vector2(288, 0)

[node name="Sprite" type="Sprite2D" parent="FarBG"]
texture_repeat = 2
position = Vector2(432, 88)
texture = ExtResource("3_o51cj")

[node name="MidBG" type="Parallax2D" parent="."]
z_index = 2
scroll_scale = Vector2(0.5, 0)
repeat_size = Vector2(288, 0)

[node name="Sprite" type="Sprite2D" parent="MidBG"]
texture_repeat = 2
position = Vector2(432, 120)
texture = ExtResource("4_kfpsy")

[node name="NearBG" type="Parallax2D" parent="."]
z_index = 3
scroll_scale = Vector2(0.66, 0)
repeat_size = Vector2(288, 0)

[node name="Sprite" type="Sprite2D" parent="NearBG"]
texture_repeat = 2
position = Vector2(432, 152)
texture = ExtResource("5_52k3x")
